--- a/bio.html
+++ b/bio.html
@@ -25,7 +25,7 @@
 
                     <tr>
                         <td width="1%">
-                            <h1 align="center"><img src="../Bionote/jcortez.jpg" height="400" width="400" alt="Johannes Cortez"></h1>
+                            <h1 align="center"><img src="https://jcorteeeeez.github.io/cortezncp3106/jcortez.jpg" height="400" width="400" alt="Johannes Cortez"></h1>
                         </td>
 
                         <td width="60%">
